ChangeLog for 0.51.x

Changes from 0.50.5 to 0.51.0:
  - new default theme, shows off new gradients (see below)
  - many themes updated to show off new menu bullet configuration
  - added new source file Display.cc... it offers an easy way to connect to
    an X display and setup screen info, this was done to make life easier
    for John Kennis, the author of the bbtools.  Image.cc and Image.hh have
    been modified to use classes from this abstraction, so that drop in
    replacements are all that is necessary to update the bbtools image code.
  - configurable menu bullet... 2 new resources for in your style file:

        menu.bulletStyle:    (round|triangle|square|diamond|empty)
        menu.bulletPosition: (left|right)

  - new style resource for setting the borderWidth on menus, client windows and
    the buttons/frame/handle/titlebar... the default theme uses a borderWidth
    of zero... it's pretty neat
  - udpated Image code... blackbox now supports 8 types of gradients (thanks
    to mosfet@kde.org... in exchange for helping him get the diagonal gradient
    code from blackbox into kde, kde gave me the source to their new gradients)
    the 8 gradients are:

        diagonal, vertical, horizontal, crossdiagonal, pipecross, elliptic,
        pyramid, rectangle

    use them just like you would normally (ie. raised elliptic gradient bevel1)
  - merged John Kennis' patch for notifying KDE modules of windows that are
    raised/lowered/activated(focused)
  - new geometry window that is displayed when a window is moved/resized
  - cleaned up code for detecting slit apps
  - window stacking code changed to keep menus above windows, and to keep the
    slit raised when the toolbar is raised
  - fixed compiler error from gcc 2.95 about frame.frame in several places
  - fixed some bugs with shaped windows that set decorations via MWM hints,
    and also fixed bugs with such windows changing their shape